gap fix

--- a/packages/app/app_transform.css
+++ b/packages/app/app_transform.css
@@ -73,6 +73,7 @@
     position:relative;
     text-align:justify;
     box-sizing:border-box;
+    column-gap: 4em;
 }
 
 .app-transform-page-content h4 {
